--- a/app/src/main/res/layout/activity_admin_insert_book.xml
+++ b/app/src/main/res/layout/activity_admin_insert_book.xml
@@ -13,7 +13,8 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="201dp"
