--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.anakarinacarrocci.fastcheckoutlibrary.com.fastcheckoutlibrary.backend.MainActivity"
+    tools:context="com.fastcheckoutlibrary.backend.MainActivity"
     tools:layout_editor_absoluteY="73dp"
     tools:layout_editor_absoluteX="0dp"
     android:background="@drawable/background_blue">
