--- a/app/src/main/res/layout/activity_new_user_account.xml
+++ b/app/src/main/res/layout/activity_new_user_account.xml
@@ -11,7 +11,7 @@
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_blue"
-           tools:context="com.example.anakarinacarrocci.fastcheckoutlibrary.com.fastcheckoutlibrary.backend.MainActivity"
+           tools:context="com.fastcheckoutlibrary.backend.MainActivity"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="73dp">
 
