--- a/app/src/main/res/layout/activity_user_search_main_menu.xml
+++ b/app/src/main/res/layout/activity_user_search_main_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.anakarinacarrocci.fastcheckoutlibrary.com.fastcheckoutlibrary.backend.UserSearchMainMenu"
+    tools:context="com.fastcheckoutlibrary.backend.UserSearchMainMenu"
     android:background="@drawable/background_blue">
 
     <LinearLayout
