--- a/app/src/main/res/layout/activity_admin_insert_book.xml
+++ b/app/src/main/res/layout/activity_admin_insert_book.xml
@@ -52,7 +52,7 @@
                 app:layout_constraintVertical_bias="0.121">
 
                 <TextView
-                    android:id="@+id/textViewInsertNewBookPublisher"
+                    android:id="@+id/textViewInsertNewBookName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -77,7 +77,7 @@
                 app:layout_constraintVertical_bias="0.123">
 
                 <EditText
-                    android:id="@+id/editTextSearchInputBookName"
+                    android:id="@+id/editTextAdminInsertBookName"
                     android:layout_width="230dp"
                     android:layout_height="44dp"
                     android:layout_weight="1"
@@ -127,7 +127,7 @@
                 app:layout_constraintVertical_bias="0.291">
 
                 <EditText
-                    android:id="@+id/editTextInsertInputBookName"
+                    android:id="@+id/editTextInsertInputBookPublisher"
                     android:layout_width="230dp"
                     android:layout_height="44dp"
                     android:layout_weight="1"
@@ -152,7 +152,7 @@
                 app:layout_constraintVertical_bias="0.448">
 
                 <TextView
-                    android:id="@+id/textViewInsertYear"
+                    android:id="@+id/textViewInsertBookYear"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -177,7 +177,7 @@
                 app:layout_constraintVertical_bias="0.456">
 
                 <EditText
-                    android:id="@+id/editTextInsertYear"
+                    android:id="@+id/editTextInsertBookYear"
                     android:layout_width="230dp"
                     android:layout_height="44dp"
                     android:layout_weight="1"
@@ -256,7 +256,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Edition"
+                    android:text="Author"
                     android:textAlignment="center"
                     android:textColor="@android:color/white"
                     android:textSize="18sp"
@@ -353,7 +353,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Genre"
+                    android:text="Library"
                     android:textAlignment="center"
                     android:textColor="@android:color/white"
                     android:textSize="18sp"
