--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -42,7 +42,7 @@
         app:layout_constraintVertical_bias="0.695">
 
         <ExpandableListView
-            android:id="@+id/ListOfResults"
+            android:id="@+id/listOfResults"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:cacheColorHint="@android:color/white"
