--- a/app/src/main/res/layout/activity_user_search_main_menu.xml
+++ b/app/src/main/res/layout/activity_user_search_main_menu.xml
@@ -18,7 +18,7 @@
         app:layout_constraintVertical_bias="0.121">
 
         <Button
-            android:id="@+id/buttonSearchBook"
+            android:id="@+id/buttonSearchByBook"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -41,7 +41,7 @@
         app:layout_constraintVertical_bias="0.32">
 
         <Button
-            android:id="@+id/buttonSearchAuthor"
+            android:id="@+id/buttonSearchByAuthor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -64,7 +64,7 @@
         app:layout_constraintVertical_bias="0.523">
 
         <Button
-            android:id="@+id/buttonSearchPublisher"
+            android:id="@+id/buttonSearchByPublisher"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -87,7 +87,7 @@
         app:layout_constraintVertical_bias="0.718">
 
         <Button
-            android:id="@+id/buttonSearchLibrary"
+            android:id="@+id/buttonSearchByLibrary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
