--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -31,25 +31,22 @@
             tools:layout_editor_absoluteY="135dp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="358dp"
-        android:layout_height="419dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_height="400dp"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.695">
+        app:layout_constraintVertical_bias="0.034">
 
-        <ExpandableListView
+        <ListView
             android:id="@+id/listOfResults"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:cacheColorHint="@android:color/white"
-            android:drawable="@android:color/white"
-            android:state_pressed="true"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp" />
-
-    </LinearLayout>
+            android:layout_height="400dp"
+            android:clickable="false"
+            android:scrollbars="horizontal|vertical"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="134dp" />
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
